# perl-to-rust

./: .gitignore  Cargo.toml  README.md
cpan-mappings/: mappings.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/perl-parser/: Cargo.toml
crates/perl-parser/src/: analyzer.rs  cpan.rs  dbi_patterns.rs  lib.rs  oo_patterns.rs  regex.rs  types.rs
crates/rust-generator/: Cargo.toml
crates/rust-generator/src/: generator.rs  lib.rs  llm.rs  prompt.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: comparator.rs  compiler.rs  fix_loop.rs  lib.rs
output/cgi-axum/: Cargo.toml
output/cgi-axum/src/: main.rs
output/getopt-long/: Cargo.toml
output/getopt-long/src/: lib.rs  main.rs
output/list-util/: Cargo.toml  list_util.rs
output/list-util-manual/: Cargo.toml
output/list-util-manual/src/: main.rs
output/oo-conversion/: Cargo.toml
output/oo-conversion/src/: animal.rs  dog.rs  main.rs
output/regex-test-manual/: Cargo.toml
output/regex-test-manual/src/: main.rs
profiles/bioinformatics/: README.md
profiles/generic/: README.md
profiles/telecom/: README.md
results/: oss-conversion-report.md  qa-review-pr1.md  qa-review-pr2.md
test-projects/cgi-sample/: hello.pl
test-projects/getopt-sample/: main.pl
test-projects/list-util-minimal/: list_util.pl
test-projects/oo-sample/: main.pl
test-projects/oo-sample/lib/: Animal.pm  Dog.pm
tests/fixtures/02_regex/expected/src/: main.rs
tests/fixtures/02_regex/input/: regex.pl
tests/fixtures/03_hash_manipulation/expected/src/: main.rs
tests/fixtures/03_hash_manipulation/input/: hash.pl
tests/fixtures/04_file_io/expected/src/: main.rs
tests/fixtures/04_file_io/input/: fileio.pl
tests/fixtures/05_oop_bless/expected/src/: main.rs
tests/fixtures/05_oop_bless/input/: main.pl
tests/fixtures/05_oop_bless/input/lib/: Dog.pm
tests/fixtures/06_cpan_module_usage/expected/src/: main.rs
tests/fixtures/06_cpan_module_usage/input/: fetch.pl
tests/fixtures/07_one_liner_expansion/expected/src/: main.rs
tests/fixtures/07_one_liner_expansion/input/: oneliner.pl
tests/fixtures/08_context_sensitivity/expected/src/: main.rs
tests/fixtures/08_context_sensitivity/input/: context.pl
tests/fixtures/09_implicit_variables/expected/src/: main.rs
tests/fixtures/09_implicit_variables/input/: implicit.pl
tests/fixtures/10_small_project/expected/: Cargo.toml
tests/fixtures/10_small_project/expected/src/: main.rs  my_module.rs
tests/fixtures/10_small_project/input/: cpanfile  script.pl
tests/fixtures/10_small_project/input/lib/: MyModule.pm
