[package]
name = "perl-to-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-powered Perl 5 to Rust conversion tool"

[[bin]]
name = "perl-to-rust"
path = "src/main.rs"

[dependencies]
perl-parser = { workspace = true }
rust-generator = { workspace = true }
verifier = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
