[package]
name = "perl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Perl 5 source code analyzer for perl-to-rust conversion"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
