[package]
name = "rust-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust code generator using LLM for perl-to-rust conversion"

[dependencies]
perl-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
