[package]
name = "verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verification engine for perl-to-rust conversion (cargo check + output comparison)"

[dependencies]
perl-parser = { workspace = true }
rust-generator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
