[package]
name = "cgi-axum"
version = "0.1.0"
edition = "2021"
description = "Converted from Perl CGI.pm → Axum web framework"

[[bin]]
name = "cgi-axum"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[workspace]
